samples/_failures_safe/1761182779_395c02_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9d3bdf2c.c: In function ‘main’:
./samples/SAFE/__tmp_9d3bdf2c.c:174:24: error: missing terminating " character
  174 |                 printf("Invalid
      |                        ^~~~~~~~
./samples/SAFE/__tmp_9d3bdf2c.c:174:17: error: expected expression at end of input
  174 |                 printf("Invalid
      |                 ^~~~~~
./samples/SAFE/__tmp_9d3bdf2c.c:174:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9d3bdf2c.c:174:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9d3bdf2c.c:174:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9d3bdf2c.c:174:17: error: expected declaration or statement at end of input
